fix: text align

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -193,7 +193,6 @@ $background-color_6: #f4f4f4;
 			align-items: flex-start;
 			margin: 15px 10px;
 			-webkit-box-align: center;
-			align-items: center;
 		}
 
 		.es-benefits__single:nth-child(1) {
